2017-08-16 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.0.0
Initial check-in

2017-08-27 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.0.1
Minor Bug #7: - Some Ticket List columns display IDs (Lonnie Blansett)
Minor Bug #8: - Ticket View has problems (Lonnie Blansett)
Minor Bug #9: - Updating tickets leads to module error (Lonnie Blansett)
Minor Bug #11: - Sotware Roadmap not displaying user names (Lonnie Blansett)
Change #13: Update code to standards (Lonnie Blansett)

2017-08-27 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.0.2
Minor Bug #10: Ticket System - Successful ticket creation doesn't display the "Subject" of the ticket (Lonnie Blansett)
Minor Bug #25: Admin - Items are not being deleted (Lonnie Blansett)
Minor Bug #19: Ticket System - Subjects with quotes get mangled on edit (Lonnie Blansett)

2017-08-29 Lonnie Blansett <lonnie@omniverserpg.com>
Omniverse 1.1.0
Feature #21: Ticket System - Link ticket fields with thier respective representations in the admin (Lonnie Blansett)